# KoVec

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
scripts/: app.py  test_renderers.py  vectorize.py
scripts/examples/: basic_usage.py
src/kovec/: __init__.py  config.py  pipeline.py
src/kovec/diffusion/: __init__.py  base.py  sd.py  sdxl.py  simplification.py
src/kovec/optimization/: __init__.py  color.py  refinement.py  structural.py  visual.py
src/kovec/renderer/: __init__.py  base.py  torch_renderer.py
src/kovec/renderer/triton_renderer/: __init__.py  coverage_kernel.py  flatten_kernel.py
src/kovec/segmentation/: __init__.py  base.py  checkpoints.py  masks.py  sam.py  sam2.py
src/kovec/utils/: __init__.py  image.py
src/kovec/vector/: __init__.py  contour.py  scene.py  types.py
